--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="bg">
         <div class="nav">
             <div class="logo">
-                <img src="../images/gamer.png" alt="">
+                <img src="./images/gamer.png" alt="">
                 play
             </div>
             <ul>
@@ -21,10 +21,10 @@
         <div class="container">
             <div class="row">
                 <div class="games">
-                   <a href="tic-tac-toe/index.html"><img src="../images/tic-tac-toe.png"></a> 
+                   <a href="tic-tac-toe/index.html"><img src="./images/tic-tac-toe.png"></a> 
                 </div>
                 <div class="games">
-                    <a href="Snake/index.html"><img src="../images/Snake.png" alt=""></a> 
+                    <a href="Snake/index.html"><img src="./images/Snake.png" alt=""></a> 
                  </div>
         </div>
         <div class="footer"></div>
