--- a/Snake/index.html
+++ b/Snake/index.html
@@ -23,7 +23,7 @@
                     <div id="hiscoreBox">HiScore: 0</div>
                 </div>
                 <div class="audio">
-                    <div class="play">PAUSE MUSIC</div>
+                    <div class="play">PLAY MUSIC</div>
                 </div>
             </div>
             <div id="board"></div>
